# fake_joycon

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  beacon_client.c  beacon_client.cpp  beacon_server.c  beacon_server.cpp  core_setup.sh  device.c  setup.sh  start.sh  stop.sh
